docs: full JAVA_TOOL_OPTIONS audit — 3 critical Hibernate flags missing
Complete audit of current vs required JVM flags. Platform cannot boot
without hibernate.boot.allow_jdbc_metadata_access=false,
hibernate.temp.use_jdbc_metadata_defaults=false, and ddl-auto=none.
17/35 services unhealthy after 11+ minutes, frozen in entity scan.

Includes correct complete JAVA_TOOL_OPTIONS for dev team to restore.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>